--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ matplotlib==3.9.0
 numpy==1.26.4
 pandas==2.2.2
 psycopg2==2.9.9
+python-dotenv==1.0.1
 seaborn==0.13.2
 spacy==3.7.5
 tabulate==0.8.10
