--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 data/content.json
 data/processed_content.json
 data/duplicates.json
+data/Roberta_content.json
 data/.env
 
 # Ignore macOS .DS_Store files
