--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 boto3==1.34.135 # Amazon Translate
+cartopy==0.23.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
 fiona==1.9.6 # Geospatial Analysis
-geopandas==1.0.1 # TEMP
 matplotlib==3.9.0
 numpy==1.26.4
 pandas==2.2.2
@@ -11,7 +11,6 @@ python-dotenv==1.0.1
 seaborn==0.13.2
 shapely==2.0.4 # Geospatial Analysis
 spacy==3.7.5
-tabulate==0.8.10
 torch==2.3.1
 transformers==4.42.3
 vaderSentiment==3.3.2
