--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,14 @@
 boto3==1.34.135 # Amazon Translate
 cartopy==0.23.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
-fiona==1.9.6 # Geospatial Analysis
 matplotlib==3.9.0
 numpy==1.26.4
 pandas==2.2.2
 psycopg2==2.9.9
-pyproj==3.6.1 # Geospatial Analysis
+pyproj==3.6.1
 python-dotenv==1.0.1
 seaborn==0.13.2
-shapely==2.0.4 # Geospatial Analysis
+shapely==2.0.4
 spacy==3.7.5
 torch==2.3.1
 transformers==4.42.3
