--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cartopy==0.23.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
 matplotlib==3.9.0
 numpy==1.26.4
-pandas==2.2.2
+polars==1.3.0
 psycopg2==2.9.9
 pyproj==3.6.1
 python-dotenv==1.0.1
